--- a/Introduction/pom.xml
+++ b/Introduction/pom.xml
@@ -16,21 +16,33 @@
     	<version>4.18.1</version>
 	</dependency>
 	
-	<dependency>
-    	<groupId>io.github.bonigarcia</groupId>
-    	<artifactId>webdrivermanager</artifactId>
-    	<version>5.7.0</version>
-    	<scope>test</scope>
-	</dependency>
+<!--	<dependency>-->
+<!--    	<groupId>io.github.bonigarcia</groupId>-->
+<!--    	<artifactId>webdrivermanager</artifactId>-->
+<!--    	<version>5.7.0</version>-->
+<!--    	<scope>test</scope>-->
+<!--	</dependency>-->
 		
 	<dependency>
     	<groupId>org.testng</groupId>
     	<artifactId>testng</artifactId>
-    	<version>7.9.0</version>
+    	<version>7.10.2</version>
     	<scope>test</scope>
 	</dependency>
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>7.10.2</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>7.10.2</version>
+          <scope>compile</scope>
+      </dependency>
 
-    </dependencies>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
