--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
           <release>21</release>
         </configuration>
       </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.5.2</version>
+            <configuration>
+                <suiteXmlFiles>
+                    <suiteXmlFile>TestNG.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </plugin>
+
     </plugins>
   </build>
 </project>
